sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:4: error: not found: value m
    m = i
    ^AlgSelectionSort:6: error: not found: value m
      if (plusPetit(k,m)){
                      ^AlgSelectionSort:7: error: not found: value m
        m = k
        ^AlgSelectionSort:10: error: not found: value m
    echange(m,i)
            ^