sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  for (i<-0 to getNombreValeurs()-1){
    m = i
    for (k<-i to getNombreValeurs()-1){
      if (plusPetit(k,m)){
        m = k
      }
    }
    echange(m,i)
  }
}